Fix contrast ratio of background and foreground colors of links

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@
 :root {
     --global-font-size: 16px;
     --global-font-color: #444444;
+    --primary-color: #007ac4;
     --mono-font-stack: Roboto Mono, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
     --font-stack: Roboto Mono, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
     --global-line-height: 1.6em;
